Bug 160964 - unexpected result of rename of file in "Find File..." list in konqueror
Summary: unexpected result of rename of file in "Find File..." list in konqueror
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-18 05:59 UTC by colesen
Modified: 2012-01-27 13:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description colesen 2008-04-18 05:59:27 UTC
Version:           3.5.9-3.fc7 Fedora (using 3.5.9-5.fc7 Fedora, Fedora release 7 (Moonshine))
Compiler:          Target: i386-redhat-linux
OS:                Linux (i686) release 2.6.23.15-80.fc7

To reproduce:

0. cd
1. mkdir d0 d0/d1
2. touch d0/d1/a.txt
3. launch konqueror as filemanager and navigate into directory d0. Use the "Find File..." function under "Tools" to find file "a.txt". The result listed is "d1/a.txt".
Now right click on the entry "d1/a.txt", select Rename, change "d1/a.txt" to "d1/b.txt" and click Return. The display of the entry is unchanged. Click Close and navigate into d1. Notice that the file was renamed to "d1/b.txt". That's the problem. (Another problem is that konqueror allows the separator "/" as part of the filename.) For expected result instead rename to "b.txt" clearing the directory specification. But that's not intuitive.
Comment 1 Florian Reinhard 2008-06-03 00:43:07 UTC
can't reproduce in svn trunk r815560 (~4.1-beta) in konqueror (no search menu) but in dolphin.	
Comment 2 Christophe Marin 2008-06-03 00:55:11 UTC
Reaffecting to konqueror. Sorry for the noise.
Comment 3 Dawit Alemayehu 2011-12-31 03:23:10 UTC
There is no rename option in the Find File dialog, but using the Properties dialog to rename the file indeed can cause the directory names to become part of the filename since the filename gets presented as d0/d1/a.txt in the properties dialog ; so this bug is indeed valid even in KDE 4.
Comment 4 Dawit Alemayehu 2012-01-02 18:37:33 UTC
Git commit 201fe150f0aa5c58d71c8e7eab21056b50bf0cc1 by Dawit Alemayehu.
Committed on 31/12/2011 at 04:54.
Pushed by adawit into branch 'KDE/4.8'.

Make sure only the filename is shown in edit box of the properties dialog.
FIXED-IN: 4.8.0
REVIEW: 103594

M  +2    -1    kio/kfile/kpropertiesdialog.cpp

http://commits.kde.org/kdelibs/201fe150f0aa5c58d71c8e7eab21056b50bf0cc1
Comment 5 Sebastian Trueg 2012-01-27 13:20:48 UTC
Git commit e8322e3fef98b02d3b8730ef62142fd716550c18 by Sebastian Trueg, on behalf of Dawit Alemayehu.
Committed on 31/12/2011 at 04:54.
Pushed by trueg into branch 'KDE/4.8'.

Make sure only the filename is shown in edit box of the properties dialog.
FIXED-IN: 4.8.0
REVIEW: 103594

M  +2    -1    kio/kfile/kpropertiesdialog.cpp

http://commits.kde.org/kdelibs/e8322e3fef98b02d3b8730ef62142fd716550c18