Make sure only the filename is shown in edit box of the properties dialog.

BUG: 160964
FIXED-IN: 4.8.0
REVIEW: 103594